# vocar

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/chip_bldc_driver/: Command.h  Config.h  Feedback.h  Status.h
devel/include/motor_control/: MotorConfigurationConfig.h
devel/lib/chip_bldc_driver/: bldc_driver_node
devel/lib/pkgconfig/: chip_bldc_driver.pc  motor_control.pc
devel/lib/python3/dist-packages/chip_bldc_driver/msg/: _Config.py  __init__.py
devel/lib/python3/dist-packages/motor_control/cfg/: MotorConfigurationConfig.py
devel/share/chip_bldc_driver/cmake/: chip_bldc_driver-msg-paths.cmake  chip_bldc_driverConfig.cmake
devel/share/common-lisp/ros/chip_bldc_driver/msg/: Config.lisp  _package.lisp  _package_Config.lisp  chip_bldc_driver-msg.asd
devel/share/gennodejs/ros/chip_bldc_driver/msg/: Config.js  _index.js
devel/share/motor_control/cmake/: motor_controlConfig.cmake
devel/share/motor_control/docs/: MotorConfigurationConfig-usage.dox  MotorConfigurationConfig.dox  MotorConfigurationConfig.wikidoc
devel/share/roseus/ros/chip_bldc_driver/: manifest.l
devel/share/roseus/ros/chip_bldc_driver/msg/: Config.l
src/chip_bldc_driver/: CMakeLists.txt
src/chip_bldc_driver/include/chip_bldc_driver/: bldc_controller.h  bldc_serial.h
src/chip_bldc_driver/launch/: vocar_startup.launch
src/chip_bldc_driver/msg/: Config.msg
src/chip_bldc_driver/src/: bldc_controller.cpp  bldc_serial.cpp  crc16.cpp
src/motor_control/: CMakeLists.txt
src/motor_control/cfg/: MotorConfiguration.cfg
src/motor_control/src/: motor_commander.py  multi_motor_config.py  uni_motor_config.py
